data/derived/fa15/progs/unify/prog0410.ml.out
Characters 187-208:
  List.map f (List.rev(List.combine(l1 l2))) in
                      ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> ('b * 'a) list
       but an expression was expected of type 'c list
